--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "default",
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jean Nassar"
+title                    : "JN Consulting"
 title_separator          : "-"
 subtitle                 : "Automate all the things!"  # site tagline that appears below site title in masthead
-name                     : "Jean Nassar"
-description              : "A robotics and Python expert working on projects around the world."
-url                      : "https://jnassar.com"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "JN Consulting"
+description              : "Automating all the things"
+url                      : "https://jn-consulting.ca"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "masasin/masasin.github.io"  # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "masasin/jn-consulting.github.io"  # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -94,35 +94,18 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jean Nassar"
-  avatar           : "/assets/images/jean.jpg"  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "JN Consulting"
+  avatar           : "/assets/images/logo.png"  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hi!"
   location         : "Earth"
   email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:jean@jnassar.com"
+      url: "mailto:contact@jn-consulting.ca"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://jnassar.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/_masasin"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/masasin"
-
-# Site Footer
-footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url:
-
+      url: "https://jn-consulting.ca"
 
 # Reading Files
 include:
