--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,11 +3,11 @@ jnassar:
   avatar           : "/assets/images/jean.jpg"  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hi!"
   location         : "Earth"
-  email            : "jean@jnassar.com"
+  email            : "jean@jn-consulting.ca"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:masasin@jnassar.com"
+      url: "mailto:jean@jn-consulting.ca"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://jnassar.com"
